Tweaking styles and fixing overlapping elements

--- a/css/index.css
+++ b/css/index.css
@@ -123,7 +123,10 @@ header p {
     border: solid 1px #396893;
 }
 
-.content .down {
+.content .timeText {
+    font-weight:bold;
     position: relative;
-    top:24px;
+    top:35px;
+    width:48px;
+    margin-top:-30px;
 }
